// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer Test append = false 1`] = `
Object {
  "connectionLogs": Array [
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer Test append = true 1`] = `
Object {
  "connectionLogs": Array [
    1,
    2,
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer handle CONNECTION_LOGS_CHANGE_ASCENDING 1`] = `
Object {
  "ascending": true,
  "connectionLogs": Array [],
  "includeTestUsersEntries": false,
  "nextPageToken": null,
  "userID": null,
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer handle CONNECTION_LOGS_CHANGE_USER_ID 1`] = `
Object {
  "ascending": false,
  "connectionLogs": Array [],
  "includeTestUsersEntries": false,
  "nextPageToken": null,
  "userID": "1433537325841258812",
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer handle CONNECTION_LOGS_FETCH_SUCCESS: connectionLogs and nextPagetoken assignation 1`] = `
Object {
  "ascending": false,
  "connectionLogs": Array [
    Object {
      "connectionID": "521629087527720243",
      "consoleID": "xboxone",
      "externalAddr": "49.246.46.6",
      "internalAddr": "1.126.246.222",
      "success": 1,
      "updateTime": 1531210756,
      "userID": "1433537325841258812",
      "username": "AnonymousHostUser",
    },
  ],
  "includeTestUsersEntries": false,
  "nextPageToken": "CAE",
  "userID": null,
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer handle CONNECTION_LOGS_FETCH_SUCCESS: empty results 1`] = `
Object {
  "ascending": false,
  "connectionLogs": Array [],
  "includeTestUsersEntries": false,
  "nextPageToken": null,
  "userID": null,
}
`;

exports[`Security - Anticheat - Whitelist - Connectionlogs- ByUser Reducer return the initial state 1`] = `
Object {
  "ascending": false,
  "connectionLogs": Array [],
  "includeTestUsersEntries": false,
  "nextPageToken": null,
  "userID": null,
}
`;
